# monorepo

anyonethere/: Cargo.toml  Dockerfile
anyonethere/embedded/: README.md  project.properties
anyonethere/embedded/lib/MQTT-TLS-HaavardM-fork/: library.properties
anyonethere/embedded/lib/MQTT-TLS-HaavardM-fork/src/mbedtls/: config.h
anyonethere/embedded/src/: jwt.cpp  jwt.h  mqtt_test.cpp  mqtt_test.ino
anyonethere/kubernetes/: deployment.yaml
anyonethere/src/: main.rs
dt_bigquery/: Cargo.toml  Dockerfile  LICENSE  README.md
dt_bigquery/src/: main.rs
kubernetes/cert-manager/: prod_issuer.yaml
kubernetes/ingress-nginx/: values.yaml
