[package]
name = "api"
version = "0.1.0"
authors = ["Håvard Skåra Mellbye <havardmellbye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "^0.3"
tokio = {version="^1", features=["rt-multi-thread"]}
google-cloud = { version = "^0", features = ["pubsub"]}
chrono = "0.4"
serde = {version= "1", features=["derive"]}
serde_json = "1"
futures = {version="^0.3"}