[package]
name = "dt_bigquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt"] }
warp = "0.3"
gcp-bigquery-client = {version = "0.10.2", features=["rust-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.1.0"
jsonwebtoken = "7"
stackdriver_logger = "*"
log = "*"
signal-hook = { version="0.3"}
signal-hook-tokio = { version = "0.3", features=["futures-v0_3"]}
futures = "0.3"